--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: ChrisAnderson.co
+title: Chris Anderson
 email: chrisbanderson@live.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hi, I'm Chris, welcome to my site.
