Changed social medial twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ author: Chris Anderson
 
 navbar-links:
 #  About Me: "aboutme"
-  Blog: "blog"
-  Shop: 
-    - E-Books: "ebooks"
-    - Courses: "courses"
+#  Blog: "blog"
+#  Shop: 
+#    - E-Books: "ebooks"
+#    - Courses: "courses"
  # Resources:
  #   - Beautiful Jekyll: "https://beautifuljekyll.com"
  #   - Learn markdown: "https://www.markdowntutorial.com/"
@@ -70,7 +70,7 @@ social-network-links:
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+#rss-description: This website is a virtual proof that I'm awesome
 
 # --- General options --- #
 
