Set blog to initial page, write first blog post

--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,13 @@ author: Chris Anderson
 
 # --- List of links in the navigation bar --- #
 
-navbar-links:
-#  About Me: "aboutme"
-#  Blog: "blog"
-#  Shop: 
-#    - E-Books: "ebooks"
-#    - Courses: "courses"
+navbar-links: 
+  About Me: "aboutme"
+  Blog: "blog"
+  Store: 
+    - E-Books: "ebooks"
+    - Courses: "courses"
+  
  # Resources:
  #   - Beautiful Jekyll: "https://beautifuljekyll.com"
  #   - Learn markdown: "https://www.markdowntutorial.com/"
@@ -28,7 +29,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/ca-logo.png"
+avatar: "/assets/img/ca-logo2.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -47,7 +48,7 @@ social-network-links:
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
 #  github: dcturbogator
-  twitter: kris24bryant
+  twitter: chrisandersonco
 #  patreon: DeanAttali
   youtube: channel/UCe-11GLjeZJm2vrxitLVNZg
 #  medium: yourname
@@ -119,8 +120,8 @@ footer-hover-col: "#0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/bgimage.png"
-footer-img: "/assets/img/bgimage.png"
+navbar-img: "#0085A1"
+footer-img: "#0085A1"
 #page-img: "/assets/img/bgimage.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
