--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author: Chris Anderson
 # --- List of links in the navigation bar --- #
 
 navbar-links: 
+  Home: "/"
   About Me: "aboutme"
   Blog: "blog"
   Store: 
@@ -128,8 +129,8 @@ footer-img: "#0085A1"
 #mobile-theme-col: "#0085A1"
 
 # For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
-#site-css:
-#  - "/assets/css/custom-styles.css"
+site-css:
+  - "/assets/css/styles.css"
 
 # If you have common JavaScript files that should be included in every page, list them here
 #site-js:
